lat and long are no longer allowed to be null values. minor tweaks to front (index) hndlbr to make it legible

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -46,6 +46,8 @@ h1 {
     margin-right: 150px;
     font-family: 'Amatic SC', cursive;
     font-size: 25px;
+    text-shadow: 3px 1px 2px rgba(0, 0, 0, 0.5);
+    font-weight: 700;
 }
 
 h4#u-sure {
@@ -54,12 +56,13 @@ h4#u-sure {
 
 @media only screen and (max-width: 640px) {
     body {
-        background-color: rgb(81, 91, 77);
-        color: rgb(171, 169, 169);
+        background-color: rgba(81, 91, 77, .7);
     }
     .summary_div {
         margin-left: 40px;
         margin-right: 40px;
+        border-radius: 2px;
+        padding: 9px;
     }
     #circle {
         margin-top: 150px;
